[gd_scene load_steps=30 format=2]

[ext_resource path="res://images/icons/menu/star_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/Inventory.gd" type="Script" id=2]
[ext_resource path="res://resources/theme.tres" type="Theme" id=3]
[ext_resource path="res://images/sultans/sultan.png" type="Texture" id=4]
[ext_resource path="res://images/items/traminus.png" type="Texture" id=5]
[ext_resource path="res://images/icons/menu/star_3.png" type="Texture" id=6]
[ext_resource path="res://images/ui/arrow.png" type="Texture" id=7]
[ext_resource path="res://fonts/Guisol.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://prefabs/ui/Settings.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/ui/angles.png" type="Texture" id=11]
[ext_resource path="res://images/textures/grain.jpg" type="Texture" id=12]
[ext_resource path="res://scripts/ui/InventoryMenu.gd" type="Script" id=13]
[ext_resource path="res://images/ui/double_gradient.png" type="Texture" id=14]
[ext_resource path="res://fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://scripts/ui/InventoryItemTooltip.gd" type="Script" id=17]
[ext_resource path="res://images/icons/menu/planet_1.png" type="Texture" id=18]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.141176, 0.137255, 0.137255, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 128, 128 )
margin_left = 64.0
margin_right = 64.0
margin_top = 64.0
margin_bottom = 64.0
modulate_color = Color( 0.141176, 0.137255, 0.137255, 1 )

[sub_resource type="DynamicFont" id=11]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
shadow_offset = Vector2( 0, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 0.247059 )
border_width_left = 1
border_width_top = 29
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=15]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxLine" id=17]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.498039 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0, 0, 0, 0.498039 )
shadow_size = 2
shadow_offset = Vector2( 0, 8 )

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 3 )
script = ExtResource( 13 )

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.137255, 0.137255, 0.498039 )

[node name="TopPart" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
custom_styles/panel = SubResource( 19 )

[node name="BottomPart" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -128.0
rect_min_size = Vector2( 0, 128 )
custom_styles/panel = SubResource( 19 )

[node name="Gradient" type="NinePatchRect" parent="."]
modulate = Color( 0, 0.6, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
margin_bottom = -128.0
texture = ExtResource( 14 )
patch_margin_top = 128
patch_margin_bottom = 128

[node name="SharpCorners" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
margin_bottom = -128.0
custom_styles/panel = SubResource( 9 )

[node name="NoiseTexture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 4

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -179.0
margin_right = 90.0
margin_bottom = -152.0
text = "Revenir au jeu"
flat = true

[node name="TextureRect" type="TextureRect" parent="Resume"]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = -40.0
margin_right = 128.0
margin_bottom = 8.0
texture = ExtResource( 7 )

[node name="Container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -649.5
margin_top = -80.0
margin_right = 649.5
margin_bottom = -40.0
custom_constants/separation = 32
alignment = 1

[node name="SultansCollection" type="Button" parent="Container"]
margin_left = 192.0
margin_right = 463.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Collections de Sultans"

[node name="Bar" type="ProgressBar" parent="Container/SultansCollection"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 11 )
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 12 )
max_value = 12.0

[node name="Value" type="Label" parent="Container/SultansCollection"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = 6.0
margin_right = 21.5
margin_bottom = 29.0
text = "0/12"

[node name="Icon" type="TextureRect" parent="Container/SultansCollection"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -17.0
margin_top = -40.0
margin_right = 17.0
margin_bottom = -7.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="PuzzlesList" type="Button" parent="Container"]
visible = false
margin_left = 367.0
margin_right = 592.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Liste des énigmes"

[node name="Bar" type="ProgressBar" parent="Container/PuzzlesList"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 11 )
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 12 )
max_value = 12.0

[node name="Value" type="Label" parent="Container/PuzzlesList"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = 6.0
margin_right = 21.5
margin_bottom = 29.0
text = "0/25"

[node name="Icon" type="TextureRect" parent="Container/PuzzlesList"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -17.0
margin_top = -40.0
margin_right = 17.0
margin_bottom = -7.0
texture = ExtResource( 18 )
stretch_mode = 6

[node name="Settings" type="Button" parent="Container"]
margin_left = 495.0
margin_right = 645.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Paramètres"

[node name="Icon" type="TextureRect" parent="Container/Settings"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -17.0
margin_top = -40.0
margin_right = 17.0
margin_bottom = -7.0
texture = ExtResource( 18 )
stretch_mode = 6

[node name="Menu" type="Button" parent="Container"]
margin_left = 677.0
margin_right = 911.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Retourner au menu"

[node name="Icon" type="TextureRect" parent="Container/Menu"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_top = -40.0
margin_right = 36.0
margin_bottom = -7.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="QuitGame" type="Button" parent="Container"]
modulate = Color( 1, 0.498039, 0.498039, 1 )
margin_left = 943.0
margin_right = 1106.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Quitter le jeu"

[node name="Icon" type="TextureRect" parent="Container/QuitGame"]
modulate = Color( 1, 1, 1, 0.498039 )
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -53.5
margin_top = -40.0
margin_right = 54.5
margin_bottom = -7.0
texture = ExtResource( 6 )
stretch_mode = 6

[node name="Inventory" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 47.0
margin_right = 234.0
margin_bottom = 111.0
custom_styles/panel = SubResource( 14 )
script = ExtResource( 2 )

[node name="List" type="HBoxContainer" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -8.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Inventory"]
anchor_right = 1.0
margin_top = -32.0
margin_bottom = -9.0
text = "Objets:"
align = 1

[node name="Money" type="Label" parent="Inventory"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
text = "0 nanos"
align = 1

[node name="Tooltip" type="Panel" parent="Inventory"]
visible = false
margin_top = 80.0
margin_right = 400.0
margin_bottom = 214.0
custom_styles/panel = SubResource( 18 )
script = ExtResource( 17 )

[node name="Icon" type="TextureRect" parent="Inventory/Tooltip"]
modulate = Color( 1, 1, 1, 0.247059 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -21.0
margin_right = -34.0
margin_bottom = 57.0
rect_rotation = 22.5
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="Inventory/Tooltip"]
anchor_right = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 27.0
text = "Carte Pass Pass"
align = 1
valign = 1

[node name="Description" type="Label" parent="Inventory/Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 32.0
margin_right = -8.0
custom_fonts/font = SubResource( 15 )
text = "Vous permet de voyager en illimité sur le réseau Ilyva."
align = 3
autowrap = true

[node name="Panel" type="Panel" parent="Inventory/Tooltip"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
custom_styles/panel = SubResource( 16 )

[node name="Panel2" type="Panel" parent="Inventory/Tooltip"]
anchor_right = 1.0
margin_top = 28.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 17 )

[node name="Tween" type="Tween" parent="Inventory/Tooltip"]

[node name="ReturnToMenu" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="Background" type="Panel" parent="ReturnToMenu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -125.0
margin_right = -64.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 7 )

[node name="Title" type="Label" parent="ReturnToMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.0
margin_top = 267.0
margin_right = 183.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 6 )
text = "Retourner au menu ?"
align = 1

[node name="Buttons" type="HBoxContainer" parent="ReturnToMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -339.0
margin_top = -341.0
margin_right = 339.0
margin_bottom = -301.0
custom_constants/separation = 64
alignment = 1

[node name="ReturnToMenuButton" type="Button" parent="ReturnToMenu/Buttons"]
margin_left = 141.0
margin_right = 375.0
margin_bottom = 40.0
text = "Retourner au menu"

[node name="Return" type="Button" parent="ReturnToMenu/Buttons"]
margin_left = 439.0
margin_right = 536.0
margin_bottom = 40.0
text = "Fermer"

[node name="QuitGame" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 10 )

[node name="Panel" type="Panel" parent="QuitGame"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 64.0
margin_top = -125.0
margin_right = -64.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 7 )

[node name="Label" type="Label" parent="QuitGame/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.0
margin_top = 32.0
margin_right = 181.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 6 )
text = "Quitter le jeu ?"
align = 1

[node name="Label2" type="Label" parent="QuitGame/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.5
margin_top = 72.0
margin_right = 360.5
margin_bottom = 121.0
text = "Votre progression sera perdue!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="QuitGame/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -339.0
margin_top = -56.0
margin_right = 339.0
margin_bottom = -16.0
custom_constants/separation = 64
alignment = 1

[node name="CloseGame" type="Button" parent="QuitGame/Panel/HBoxContainer"]
margin_left = 215.0
margin_right = 308.0
margin_bottom = 40.0
text = "Quitter"

[node name="Return" type="Button" parent="QuitGame/Panel/HBoxContainer"]
margin_left = 372.0
margin_right = 463.0
margin_bottom = 40.0
text = "Retour"

[node name="Settings" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Container/SultansCollection" to="." method="_on_SultansCollection_pressed"]
[connection signal="pressed" from="Container/PuzzlesList" to="." method="_on_PuzzlesList_pressed"]
[connection signal="pressed" from="Container/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Container/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Container/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="ReturnToMenu/Buttons/ReturnToMenuButton" to="." method="_on_ReturnToMenuButton_pressed"]
[connection signal="pressed" from="ReturnToMenu/Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="QuitGame/Panel/HBoxContainer/CloseGame" to="." method="_on_CloseGame_pressed"]
[connection signal="pressed" from="QuitGame/Panel/HBoxContainer/Return" to="." method="_on_Return_pressed"]
